MPL/test/MplPasses/TypeChecker/cases/kindcheck/negativehigherkindedtype/4.mpl
defn 
    data 
        Strange(A,B) -> C =
            StrangeCts :: Test(A) -> C
    data 
        Test(A,B) -> C =
            Testtt :: A(B) -> C
